<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    android:background="#2a2c30"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0388E5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="80dp"

            android:text="@string/titulo"
            android:textColor="#fff"
            android:textSize="25dp"
            android:textStyle="bold" />


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#edf0f5"
        android:text="@string/login"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digitarLogin"
        android:background="#e1dede"
        android:padding="5dp"
        android:textColorHint="#060606"
        android:id="@+id/editLogin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:text="@string/senha"/>


    <EditText
        android:id="@+id/editSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e1dede"
        android:hint="@string/digitarSenha"
        android:padding="5dp"
        android:textColorHint="#060606"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/btLogin"
            android:layout_gravity="center"
            android:id="@+id/btLogin"
            android:textColor="#fff"
            android:textStyle="bold"
            android:background="#0388E5"
            android:padding="12dp"
            android:onClick="entrar"

            />



</LinearLayout>


