<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    android:background="#2a2c30"
    android:orientation="vertical"
    tools:context=".view.RelatorioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0388E5">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="120dp"

            android:text="@string/tituloRelatorio"
            android:textColor="#fff"
            android:textSize="25dp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#0388E5"

            android:text="@string/btPesquisar"
            android:textColor="#fff" />


        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"

            android:layout_margin="20dp"
            android:background="#0388E5"
            android:text="@string/btLimparDados"
            android:textColor="#fff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:text="Pedido"
            android:layout_marginLeft="20dp"
            android:textColor="#141414" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:text="Produto"
            android:layout_marginLeft="20dp"
            android:textColor="#141414" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Data Início"
        android:textColor="#fff"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="12dp"
        android:layout_margin="15dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/campoData"
        android:layout_marginLeft="12dp"
        android:textColor="#131212"
        android:background="#fff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Data Final"
        android:textColor="#fff"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="12dp"
        android:layout_margin="15dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/campoDataFinal"
        android:layout_marginLeft="12dp"
        android:textColor="#131212"
        android:background="#fff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Produto"
        android:textColor="#fff"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="12dp"
        android:layout_margin="15dp"/>


    <EditText
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:hint="@string/campoProduto"
        android:layout_marginLeft="12dp"
        android:textColor="#131212"
        android:background="#fff"/>

    <ListView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>




</LinearLayout>